--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1 class="title"><img src="images/header-logo.png" alt=""></h1>
             <div class="lan2">
                 <select id="language" >
-                    <option id="zh-CN" value="zh-CN" >中文简体</option>
+                    <option id="zhCN" value="zhCN" >中文简体</option>
                     <option id="en" value="en" >English</option>
                 </select>
             </div>
